[package]
name = "rpssl"
version = "0.1.0"
authors = ["Дамјан Георгиевски <gdamjan@gmail.com>"]
license = "MIT"
readme = "README.md"

[dependencies]
actix = "0.6"
actix-web = { git = "https://github.com/actix/actix-web.git" }
uuid = { version = "0.6", features = ["v4"] }
serde = "1.0"
serde_derive = "1.0"
tokio-timer = "0.2.1"
futures = "0.1"
