[package]
name = "rpssl"
version = "0.1.0"
authors = ["Дамјан Георгиевски <gdamjan@gmail.com>"]
license = "MIT"
readme = "README.md"

[dependencies]
actix = "*"
actix-web = { git = "https://github.com/actix/actix-web.git" }
uuid = { version = "0.6", features = ["v4"] }
serde = "1.0"
serde_derive = "1.0"
futures = "0.1"

[patch.crates-io]
actix = { git = "https://github.com/actix/actix.git" }
